# stocks_analyzer

./: .gitignore  LICENSE  README.md  __init__.py  analyzer.sh  bonds.py  finance.py  npv_calculator.py  npv_config.json  portfolio.py  portfolio_analyzer.py  pyproject.toml  reports.py  requirements.txt  stocks_analyzer.py  ticker.py  ticker_gui.py  yahoo_reports.py  yfinance_info.py
gui/: portfolio_builder.py  ticker_table.py
inputs/: Portfolio1.tsv  Portfolio_indices_example.tsv  example_portfolio.tsv  russel_formated.txt  screening_example.tsv
msn_reports/: AAPL-NASDAQ-balance_sheet-annual.html  AAPL-NASDAQ-balance_sheet-quarterly.html  AAPL-NASDAQ-income_statement-annual.html  AAPL-NASDAQ-income_statement-quarterly.html  MSFT-NASDAQ-balance_sheet-annual.html  MSFT-NASDAQ-balance_sheet-quarterly.html  MSFT-NASDAQ-income_statement-annual.html  MSFT-NASDAQ-income_statement-quarterly.html  NVDA-NASDAQ-balance_sheet-annual.html  NVDA-NASDAQ-balance_sheet-quarterly.html  NVDA-NASDAQ-income_statement-annual.html  NVDA-NASDAQ-income_statement-quarterly.html
test_inputs/: Portfolio.tsv  Portfolio1.tsv  my_stocks.txt
yahoo_files/: AAPL-yahoo.json  MSFT-yahoo.json  NVDA-yahoo.json
